--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ h1, h2, h3, h4, h5, h6 {
 
 @layer components {
     .sidebar-button {
-        @apply text-2xl font-semibold text-pink-900;
+        @apply text-xl font-semibold text-pink-900;
         font-family: Merriweather;
     }
 
@@ -24,10 +24,10 @@ h1, h2, h3, h4, h5, h6 {
             px-9 py-4 
             rounded-full 
             font-bold 
-            text-3xl
-            bg-pink-200/40
+            text-2xl
+            bg-fuchsia-300/20
             transition-colors duration-300
-            hover:bg-pink-200
+            hover:bg-fuchsia-300/60
             text-pink-900
     }
 
